--- a/src/App.css
+++ b/src/App.css
@@ -31,55 +31,15 @@
 }
 
 .todo-app {
+  filter: drop-shadow(0 0 50px rgba(0,0,0,.05));
   background-color: transparent;
   max-width: 500px;
   width: 100%;
   margin: 0 auto;
 }
 
-.todo-form {
-  box-shadow: 0 0 50px 50px rgba(0,0,0,.05);
-  background-color: #fff;
-  border-radius: 4px;
-  display: flex;
-  justify-content: left;
-  margin: 0 auto 20px;
-  padding: 20px;
-}
-
-.todo-input-add {
-  background-color: #ddd;
-  border-radius: 2px;
-  height: 40px;
-  color: #282c34;
-  border: 0 none;
-  outline: 0 none;
-  padding: 0 10px;
-}
-
-.todo-items {
-  box-shadow: 0 0 50px 50px rgba(0,0,0,.05);
-  background-color: #fff;
-  border-radius: 4px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.todo-list {
-  list-style: none;
-}
-
-.todo-list-item {
-  display: flex;
-  align-items: center;
-  padding: 10px 0;
-}
-
-.todo-list-item-cb {
--webkit-appearance: none;
-}
-
 input[type=checkbox] {
+  -webkit-appearance: none;
   visibility: hidden;
 }
 
@@ -112,8 +72,4 @@ input[type=checkbox] + label:after {
 
 input[type=checkbox]:checked + label:after {
   opacity: 1;
-}
-
-.todo-list-item-label {
-  font-size: 14px;
 }
