--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.todo-list-item:last-of-type {
+  border-bottom: 0 none;
 }
 
 .todo-list-item-label {
