--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -11,4 +11,26 @@
 
 .todo-list-item-label {
   font-size: 14px;
+  flex: 1;
+  text-align: left;
+}
+
+.todo-list-item-button-delete {
+  visibility: hidden;
+  border: 0 none;
+  outline: 0 none;
+  height: 20px;
+  background-color: #09d3ac;
+  color: #fff;
+  border-radius: 2px;
+  flex: 0 1;
+  font-size: 10px;
+  font-weight: bold;
+  padding: 0 10px;
+  margin: 0 0 0 10px;
+  cursor: pointer;
+}
+
+.todo-list-item:hover .todo-list-item-button-delete {
+  visibility: visible;
 }
