--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: rgb(40,44,52);
+  background: linear-gradient(135deg, rgba(40,44,52,1) 0%, rgba(79,79,79,1) 100%);
   min-height: 30vh;
   display: flex;
   flex-direction: column;
